# Sky-Player

./: .gitignore  AGENTS.md  README.md  old-chat-2.md  old-chat.md  play  play.bat  pyproject.toml  requirements.txt
.antigravitycli/: 3480a05a-97e1-46fc-90a7-327665078983.json
docs/: test-matrix.md  timing-baseline.md  timing-calibration.md  timing-principles.md  upgrade-plan.md
link/: New Internet Shortcut.url  gg_drive_sky_sheet.url  link.url
songs/: 1test copy.json  Alen Walker - On My Way.json  All Of Me.json  Arthur Warrell - We Wish You A Merry Christmas.json  As It Was.json  Billie eilish - lovely   (Leuu).skysheet  Careless Whisper.json  Chúc bé ngủ ngon  (Minh Châu 2906).txt  Comedy easy ver.json  Comedy.json  Counting Star.json  Cupid - FIFTY FIFTY.json  Dandelions.json  Death bed.json  Despacito.json  Diamonds.json  Die For You.json  Die with a smile.json  Doraemon -ukm.json  Faded.skysheet  Glimpse of Us.json  Golden hour.json  Howl's Moving Castle v2.json  Howl's Moving Castle.json  Hỷ - Cát Đông Kỳ - Sky Children Music Studio.json  I LOVE YOU 3000.json  I Love You So.json  I'm yours.json  Interstellar.json  KILL BILL.json  KiKi Delivery Service.json  Last Chistmas.json  Last Christmas Easy.json  Let It Go 冰雪奇缘 烛子ikina.skysheet  Lily (uma).json  Marshmello - Alone.json  Mary On A Cross - Ghost.json  Memories.json  Nổi nhớ tựa ngân hà.json  Ocean Eyes.json  (+40 more)
src/: build_app.py  config.py  inputs.py  main.py  scheduler.py  songs.py  ui.py
tests/: generate_snapshots.py  test_acceptance_flow.py  test_advanced.py  test_calibration.py  test_cli.py  (+7 more)
(+37 files in other folders)
